@@ -14,8 +14,14 @@ NUTMEM_SIZE = "4096"
 NUTMEM_START = "0x100"
 NUTXMEM_SIZE = "28416"
 NUTXMEM_START = "0x1100"
-NUT_THREAD_IDLESTACK = "384"
+NUT_THREAD_IDLESTACK = "128"
 NUT_THREAD_MAINSTACK = "384"
+NUT_THREAD_NICRXSTACK = "192"
+NUT_THREAD_TCPSMSTACK = "256"
+NUT_THREAD_DHCPSTACK = "256"
+NUT_THREAD_PPPSMSTACK = "256"
+NUT_THREAD_SNTPSTACK = "256"
+NUT_THREAD_AHDLCRXSTACK = "256"
 NUT_CPU_FREQ = "12000000"
 CONFOS_EE_OFFSET = "0"
 UART0_RTS_BIT = "4"
